// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer default 1`] = `
Object {
  "locale": "EN",
  "period": 60,
  "refresh": 0,
  "source": "gemini",
}
`;

exports[`ui reducer period 1`] = `
Object {
  "locale": "EN",
  "period": 1,
  "refresh": 1234567890,
  "source": "gemini",
}
`;

exports[`ui reducer refresh 1`] = `
Object {
  "locale": "EN",
  "period": 60,
  "refresh": 1234567890,
  "source": "gemini",
}
`;

exports[`ui reducer source 1`] = `
Object {
  "locale": "EN",
  "period": 1,
  "refresh": 1234567890,
  "source": "test",
}
`;
